--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.3.2"
   }
 }
